--- a/networks/1. 사용자 어플리케이션.md
+++ b/networks/1. 사용자 어플리케이션.md
@@ -21,10 +21,34 @@
 < 정리 >
 
 1. 사용자가 url 주소를 입력하게된다.
+
 2. 브라우저는 사용자가 보내온 url 정보를 브라우저 내에 있는 리졸버를 실행.
-3. 리졸버는 OS안에 있는 프로토콜 스택을 이용해 해당 도메인으로 등록되어 있는 ip 주소를 알아내기 위해 DNS 서버에 요청 메시지를 보낸다.
+
+3. 리졸버는 OS안에 있는 프로토콜 스택을 이용해 해당 도메인으로 등록되어 있는 ip 주소를 알아내기 
+위해 DNS 서버에 요청 메시지를 보낸다.
+
 4. 이때 os 프로토콜 스택안에는 (tcp udp) (ip)으로 나누어져 있는데, udp(요청 속도가 빠른)를 이용해 클래스, 이름, 타입을 DNS 서버에 보낸다.
+
 5. 요청을 받은 DNS 서버는 루트 도메인 부터 조사를 한뒤에 해당 IP 주소를 반환해 준다.
+
 6. 이제 socket 라이브러리를 이용해 데이터를 주고 받을 소켓을 만든다.
+
 7. 이 과정에서 디스크립터를 리턴해준다. ( 디스크립터는 소켓을 식별하기 위해서 만듭니다.)
+
 8. 이제 접속을 하려는 대상의 IP, Port, 디스크립터를 이용해 connect 요청을 실시하게 됩니다.
+
+
+## <사용자가 브라우저에 도메인을 입력했을 때에 생기는 일>
+![Alt text](image.png)
+
+1. 브라우저는 네트워크 통신을 할 수 없기 때문에, 프로토콜 스택을 이용한다. 
+
+2. 브라우저 <-> DNS 서버 사이에 소켓 생성.
+
+3. 브라우저에서 DNS 리졸버(서버)에 보낼 메시지를 만든다.
+
+4. 프로토콜 스택을 이용해서 DNS 서버에 (UDP/IP)프로토콜로 보낸다.
+
+5. DNS 서버로 부터 받은 IP 주소를 받아온다.
+
+6. 이후 받은 IP 주소로 tcp/ip 요청
