--- a/networks/사용자 어플리케이션.md
+++ b/networks/사용자 어플리케이션.md
@@ -39,7 +39,7 @@
 
 
 ## <사용자가 브라우저에 도메인을 입력했을 때에 생기는 일>
-![Alt text](image.png)
+![Alt text](image/image.png)
 
 1. 브라우저는 네트워크 통신을 할 수 없기 때문에, 프로토콜 스택을 이용한다. 
 
