--- a/networks/사용자 어플리케이션.md
+++ b/networks/사용자 어플리케이션.md
@@ -52,3 +52,26 @@
 5. DNS 서버로 부터 받은 IP 주소를 받아온다.
 
 6. 이후 받은 IP 주소로 tcp/ip 요청
+
+# stub? 
+> 스텁 함수는 가짜 함수(속이 빈 함수)라고 생각하시면 됩니다.
+
+흔히 단위테스트 과정에서 아래의 3가지 경우 스텁함수를 사용합니다.
+
+1. 구현이 되지 않은 함수거나 라이브러리에서 제공하는 함수
+2. 함수가 반환하는 값을 임의로 생성
+3. 복잡한 논리 흐름을 가지는 경우 테스트를 단순화할 목적으로 사용
+
+Stub는 RPC의 핵심 개념으로 Parameter 객체를 Message로 Marshalling/Unmarshalling하는 레이어이다.
+
+서버와 클라이언트는 서로 다른 주소 공간을 사용하므로 함수 호출에 사용된 매개 변수를 꼭 변환해줘야 한다. 그렇지 않으면 메모리 매개 변수에 대한 포인터가 다른 데이터를 가리키게 되기 때문이다.
+
+client의 stub은 함수 호출에 사용된 파라미터의 변환(marshalling) 및 함수 실행 후 서버에서 전달된 결과의 변환 담당   
+
+server의 stub은 클라이언트가 전달한 매개 변수의 역변환(unmarshalling) 및 함수 실행 결과 변환을 담당   
+
+# grpc
+
+![Alt text](image.png)
+출처 :https://velog.io/@dojun527/gRPC%EB%9E%80
+
